--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 env:
-  SOLUTION_FILE_PATH: .
+  SOLUTION_FILE_PATH: ADSearch.sln
   BUILD_CONFIGURATION: Release
 
 permissions:
@@ -27,6 +27,10 @@ jobs:
     - name: run MSBuild
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+    
+    - name: run dir listing
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: dir
 
     - name: Setup DotFuscator
       run: |
@@ -36,7 +40,7 @@ jobs:
 
     - name: Build obfuscated versions
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: DotfuscatorCE\dotfuscator.exe "dotfuscator_config.xml"
+      run: DotfuscatorCE\dotfuscator.exe "DotfuscatorCE\dotfuscator_config.xml"
 
     - name: Upload obfuscated version
       uses: actions/upload-artifact@v4
