--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -28,24 +28,27 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
     
-    - name: Upload ADSearch.exe
-      uses: actions/upload-artifact@v4
-      with:
-        name: ADSearch.exe
-        path: ADSearch\ADSearch\ADSearch\bin\Release\ADSearch.exe
+    - name: directory listing
+      run: dir /s
+    
+    #- name: Upload ADSearch.exe
+    #  uses: actions/upload-artifact@v4
+    #  with:
+    #    name: ADSearch.exe
+    #    path: ADSearch\ADSearch\ADSearch\bin\Release\ADSearch.exe
 
-    - name: Setup DotFuscator
-      run: |
-        7z x Dotfuscator\DotfuscatorCE.zip
-        mkdir -p $env:USERPROFILE\AppData\Local\"PreEmptive Solutions"\"Dotfuscator Community Edition"\6.0 -erroraction 'silentlycontinue'
-        cp DotfuscatorCE\license\* $env:USERPROFILE\AppData\Local\"PreEmptive Solutions"\"Dotfuscator Community Edition"\6.0\
+    #- name: Setup DotFuscator
+    #  run: |
+    #    7z x Dotfuscator\DotfuscatorCE.zip
+    #    mkdir -p $env:USERPROFILE\AppData\Local\"PreEmptive Solutions"\"Dotfuscator Community Edition"\6.0 -erroraction 'silentlycontinue'
+    #    cp DotfuscatorCE\license\* $env:USERPROFILE\AppData\Local\"PreEmptive Solutions"\"Dotfuscator Community Edition"\6.0\
 
-    - name: Build obfuscated versions
-      working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: DotfuscatorCE\dotfuscator.exe "DotfuscatorCE\dotfuscator_config.xml"
+    #- name: Build obfuscated versions
+    #  working-directory: ${{env.GITHUB_WORKSPACE}}
+    #  run: DotfuscatorCE\dotfuscator.exe "DotfuscatorCE\dotfuscator_config.xml"
 
-    - name: Upload obfuscated version
-      uses: actions/upload-artifact@v4
-      with:
-        name: ADSearch_Obfuscated.exe
-        path: ADSearch_Obfuscated.exe
+    #- name: Upload obfuscated version
+    #  uses: actions/upload-artifact@v4
+    #  with:
+    #    name: ADSearch_Obfuscated.exe
+    #    path: ADSearch_Obfuscated.exe
