--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -29,7 +29,7 @@ jobs:
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
     
     - name: directory listing
-      run: dir /s
+      run: Get-ChildItem -Recurse
     
     #- name: Upload ADSearch.exe
     #  uses: actions/upload-artifact@v4
