--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -28,9 +28,6 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
     
-    - name: directory listing
-      run: Get-ChildItem -Recurse
-    
     - name: Upload ADSearch.exe
       uses: actions/upload-artifact@v4
       with:
@@ -45,7 +42,7 @@ jobs:
 
     - name: Build obfuscated versions
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: DotfuscatorCE\dotfuscator.exe "DotfuscatorCE\dotfuscator_config.xml"
+      run: DotfuscatorCE\dotfuscator.exe "Dotfuscator\dotfuscator_config.xml"
     
     - name: directory listing
       run: Get-ChildItem -Recurse
